<resources>
    <string name="app_name">My Application</string>
    <string name="action_home">Home</string>
    <string name="action_video">Video</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_trend">Trend</string>
    <string name="action_user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_signin">SigninActivity</string>
</resources>